src/snapshots/ec2hx__lang@linux.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/linux
snapshot_kind: text
---

