src/snapshots/ec2hx__lang@php.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/php
snapshot_kind: text
---
[[language]]
name = "awk"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "bash"
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "c"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "common-lisp"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "cpp"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "d"
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "diff"
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "dtd"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-Makefile*"
scope = "text.plain"
file-types = [{ glob = "Makefile*" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-ac"
scope = "text.plain"
file-types = [{ glob = "*.ac" },]
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "ec2hx-unknown-lang-bat"
scope = "text.plain"
file-types = [{ glob = "*.bat" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-dasc"
scope = "text.plain"
file-types = [{ glob = "*.dasc" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-m4"
scope = "text.plain"
file-types = [{ glob = "*.m4" },]
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "ec2hx-unknown-lang-phpt"
scope = "text.plain"
file-types = [{ glob = "*.phpt" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-re"
scope = "text.plain"
file-types = [{ glob = "*.re" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-skl"
scope = "text.plain"
file-types = [{ glob = "*.skl" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-w32"
scope = "text.plain"
file-types = [{ glob = "*.w32" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-xsl"
scope = "text.plain"
file-types = [{ glob = "*.xsl" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-y"
scope = "text.plain"
file-types = [{ glob = "*.y" },]
indent = { unit = "\t", tab-width = 4 }

[[language]]
name = "git-commit"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "html"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "markdown"
indent = { unit = "  ", tab-width = 2 }

[[language]]
name = "php"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "xml"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "yaml"
indent = { unit = "  ", tab-width = 2 }
